--- a/app/views/pages/cadastro.ejs
+++ b/app/views/pages/cadastro.ejs
@@ -59,7 +59,7 @@
                 <section class="login-register">
                     <section class="login">
                         <h3>Entrar</h3>
-                        <form id="loginForm" action="/entrar" method="post" >
+                        <form id="loginForm" action="/login" method="post" >
                             <label for="email_login">Email ou nome de usuário</label>
                             <input type="text" id="email_login" name="email_usu" placeholder="Digite aqui...">
 
