--- a/app/views/pages/carrinho.ejs
+++ b/app/views/pages/carrinho.ejs
@@ -213,7 +213,7 @@
           </section>
           
           <% if(typeof carrinho !== 'undefined' && carrinho && carrinho.length > 0){ %>
-            <a href="/finalizandocompra2" class="checkout-btn">Finalizar Compra</a>
+            <a href="/finalizandocompra" class="checkout-btn">Finalizar Compra</a>
           <% } else { %>
             <a href="/categorias" class="checkout-btn">Continuar Comprando</a>
           <% } %>
@@ -262,7 +262,7 @@
                 </section>
   <!-- Botão Finalizar Compra -->
   <% if(typeof carrinho !== 'undefined' && carrinho && carrinho.length > 0){ %>
-    <a href="/finalizandocompra2"><button class="finalize-button2">Finalizar compra</button></a>
+    <a href="/finalizandocompra"><button class="finalize-button2">Finalizar compra</button></a>
   <% } else { %>
     <a href="/categorias"><button class="finalize-button2">Continuar comprando</button></a>
   <% } %>
