--- a/app/views/pages/produto1.ejs
+++ b/app/views/pages/produto1.ejs
@@ -54,7 +54,10 @@
 </section>
        <section class="product-view">
     <main>
-                <center><img src="imagens/fila-regatas.png" alt="img-responsiva"></center>
+         <center>
+            <img src="imagens/regata branca.jpeg" alt="Regata branca" style="width: 80px; height: 80px; margin: 5px;">
+            <img src="imagens/fila-regatas.png" alt="Fila regatas" style="width: 80px; height: 80px; margin: 5px;">
+         </center>
           <section class="produto-container">
             <h1>Regata Branco </h1>
             <section class="preco">
