--- a/app/views/pages/produto4.ejs
+++ b/app/views/pages/produto4.ejs
@@ -54,7 +54,10 @@
 </section>
        <section class="product-view">
     <main>
-                <center><img src="imagens/fila-blusas.png" alt="img-responsiva"></center>
+         <center>
+            <img src="imagens/conjunto de blusa rosa.jpeg" alt="Conjunto rosa" style="width: 80px; height: 80px; margin: 5px;">
+            <img src="imagens/fila-blusas.png" alt="Fila blusas" style="width: 80px; height: 80px; margin: 5px;">
+         </center>
           <section class="produto-container">
             <h1>Conjunto Rosa</h1>
             <section class="preco">
