--- a/app/views/pages/produto2.ejs
+++ b/app/views/pages/produto2.ejs
@@ -53,8 +53,10 @@
     </section>
        <section class="product-view">
     <main>
-
-         <center><img src="imagens/fila-vestido-branco.png" alt="img-responsiva"></center>
+         <center>
+            <img src="imagens/produto2.png" alt="Vestido branco" style="width: 80px; height: 80px; margin: 5px;">
+            <img src="imagens/fila-vestido-branco.png" alt="Fila vestido branco" style="width: 80px; height: 80px; margin: 5px;">
+         </center>
           <section class="produto-container">
             <h1>Vestido Branco Com Decote</h1>
             <section class="preco">
@@ -322,7 +324,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    window.location.href = '/finalizandocompra2';
+                    window.location.href = '/finalizandocompra';
                 } else {
                     alert('Erro ao adicionar produto');
                 }
