--- a/app/views/pages/produto3.ejs
+++ b/app/views/pages/produto3.ejs
@@ -54,7 +54,10 @@
 </section>
        <section class="product-view">
     <main>
-                <center><img src="imagens/fila-vestido-rosa.png" alt="img-responsiva"></center>
+         <center>
+            <img src="imagens/vestido roxo.jpeg" alt="Vestido roxo" style="width: 80px; height: 80px; margin: 5px;">
+            <img src="imagens/fila-vestido-rosa.png" alt="Fila vestido rosa" style="width: 80px; height: 80px; margin: 5px;">
+         </center>
           <section class="produto-container">
             <h1>Vestido Roxo</h1>
             <section class="preco">
